--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,9 +4,7 @@
 
 
 .sidebar {
-  z-index: 1;
   background-color: #0C0D14;
-  height: 100vh;
   min-width: 12%;
   max-width: 12%;
   border-right: 1px solid #aba7a7;
@@ -14,6 +12,7 @@
 
 .main__content {
   min-height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #0C0D14;
 }
